@@ -1,3 +1,8 @@
+2010-01-05  Roland McGrath  <roland@redhat.com>
+
+	* readelf.c (dwarf_attr_string): Match DW_AT_GNU_vector and
+	DW_AT_GNU_template_name.
+
 2010-01-04  Roland McGrath  <roland@redhat.com>
 
 	* readelf.c (handle_notes_data): Grab NT_AUXV only for name "CORE".
